1.3.8
	+ Bug fix: fixed order in EBox::Global::modified modules. Now
	  Global and Backup use the same method to order the module list
	  by dependencies
1.3.7
	+ Bug fix: generate public.css and login.css in dynamic-www directory
	  which is /var/lib/ebox/dynamicwww/css/ and not in /usr/share/ebox/www/css
	  as these files are generate every time eBox's apache is
	  restarted
	+ Bug fix: modules are restored now in the correct dependency
	  order
	+ ebox-make-backup accepts --destinaton flag to set backup's file name
	+ Add support for permanent messages to EBox::View::Customizer
1.3.6
	+ Bug fix: override _ids in EBox::Events::Watcher::Log to not return ids
	which do not exist
	+ Bug fix: fixed InverseMatchSelect type which is used by Firewall module
	+ New widget for the dashboard showing useful support information
	+ Bugfix: wrong permissions on CSS files caused problem with usercorner
	+ CSS are now templates for easier rebranding
	+ Added default.theme with eBox colors
	+ Support customFilter in models for big tables
1.3.5
	+ Bugfix: Allow unsafe characters in password type
	+ Add FollowSymLinks in eBox apache configuration. This is useful
	  if we use js libraries provided by packages
1.3.4
	+ Updated company name in the footer
	+ Bugfix: humanEventMessage works with multiple tableInfos now
	+ Add ebox-dbus-check to test if we can actually connect to dbus
1.3.4
	+ bugfix: empty cache before calling updatedRowNotify
	+ enable Log dispatcher by default and not allow users to disable
	it
	+ consolidation process continues in disabled but configured modules
	+ bugfix: Save Changes button doesn't turn red when accessing events for
	first time
1.3.2
	+ bugfix: workaround issue with dhcp configured interfaces at boot time
1.3.1
	+ bugfix: wrong regex in service status check
1.3.0
	+ bugfix: make full backup work again
1.1.30
	+ Change footer to new company holder
	+  RAID does not generate 'change in completion events, some text
	problems fixed with RAID events