@@ -1,3 +1,5 @@
+HEAD
+	+ Add disableApparmorProfile to EBox::Module::Service
 1.3.8
 	+ Bug fix: fixed order in EBox::Global::modified modules. Now
 	  Global and Backup use the same method to order the module list
